[package]
name = "quant-realm"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["extern_crate_std", "derive"] }
half = { version = "2.7.1", features = ["bytemuck"] }
memmap2 = "0.9.10"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
